--- a/index.css
+++ b/index.css
@@ -1,10 +1,21 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,200&display=swap");
+
+:root {
+  --gradient: #303030;
+  --white: #fff;
+  --black: #000;
+  --body: #fff;
+  --header: #251302;
+  --focus: #7c7c7c;
+  --active: #353535;
+  --grey: #3d3d3d;
+}
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 body {
@@ -12,12 +23,15 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: var(--body);
 }
 
 header {
-  width: 98%;
+  background-color: var(--header);
+  width: 100%;
   padding: 20px;
   margin-bottom: -15px;
+  box-shadow: 0 10px 50px var(--grey);
 }
 
 main {
@@ -29,13 +43,17 @@ main {
 }
 
 #navbar {
-  width: 100%;
-  height: 40px;
+  width: 98%;
+  margin: auto;
   padding: 20px;
-  border: 2px solid #000;
+  border: 2px solid var(--white);
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+#navbar h1 {
+  color: var(--white);
 }
 
 #navbar ul {
@@ -46,36 +64,45 @@ main {
 }
 
 #navbar ul li a {
+  user-select: none;
   text-decoration: none;
-  color: black;
+  color: var(--white);
+}
+
+#navbar ul li a:hover {
+  color: var(--focus);
 }
 
 #navbar ul li a:focus {
-  color: rgb(4, 103, 233);
+  color: var(--focus);
 }
 
 #navbar ul li a:active {
-  color: rgb(4, 103, 233);
+  color: var(--active);
 }
 
 #navbar ul li:nth-child(1) {
   width: 70px;
-  border-right: 2px solid #000;
+  border-right: 2px solid var(--white);
 }
 
 #navbar ul li:nth-child(2) {
   width: 70px;
-  border-right: 2px solid #000;
+  border-right: 2px solid var(--white);
 }
 
 #date {
   width: 95%;
   height: 25px;
   padding: 5px;
-  margin: auto;
+  margin: 20px auto;
   display: flex;
   justify-content: flex-end;
-  color: #000;
+  color: var(--black);
+  font-weight: 400;
+  font-family: monospace;
+  font-size: 1.3rem;
+  z-index: 2;
 }
 
 #section_list {
@@ -86,7 +113,8 @@ main {
 #section_list h1,
 #add_section h1,
 #contact_section h1 {
-  margin: 80px 0 20px 0;
+  color: var(--header);
+  margin: 80px 0 20px;
   font-size: 2rem;
 }
 
@@ -94,8 +122,10 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  min-height: 40px;
-  border: 2px solid black;
+  max-height: 500px;
+  overflow-y: auto;
+  border: 2px solid var(--black);
+  box-shadow: 0 1px 20px var(--header);
 }
 
 #section_list #book_list li {
@@ -123,6 +153,14 @@ main {
 .rmvBook {
   width: 70px;
   height: 30px;
+  cursor: pointer;
+  border: 1px solid var(--grey);
+  outline: none;
+}
+
+.rmvBook:hover {
+  background-color: var(--header);
+  color: var(--white);
 }
 
 #add_section {
@@ -148,7 +186,7 @@ main {
   width: 100%;
   outline: none;
   padding: 5px;
-  border: 1px solid #000;
+  border: 1px solid var(--black);
   margin: 10px auto;
 }
 
@@ -156,6 +194,14 @@ main {
   width: 50px;
   height: 30px;
   align-self: flex-end;
+  cursor: pointer;
+  border: 1px solid var(--grey);
+  outline: none;
+}
+
+#addBook button:hover {
+  background-color: var(--header);
+  color: var(--white);
 }
 
 #contact_section h1 {
@@ -180,10 +226,73 @@ main {
   display: flex;
   justify-content: start;
   align-items: center;
-  border: 2px solid #000;
+  border: 2px solid var(--black);
   bottom: 10px;
 }
 
 .display_none {
   display: none !important;
+}
+
+/* keyframe start */
+
+.title-animate {
+  animation-duration: 0.5s;
+  animation-name: slide_lr;
+}
+
+@keyframes slide_lr {
+  from {
+    margin-left: -100%;
+    width: 30%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: -100%;
+  }
+}
+
+footer p {
+  animation-duration: 0.3s;
+  animation-name: slide_rl;
+}
+
+@keyframes slide_rl {
+  from {
+    margin-left: 100%;
+    width: 100%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+.topToBottom {
+  animation-duration: 0.3s;
+  animation-name: slide_tb;
+}
+
+@keyframes slide_tb {
+  from {
+    margin-left: -100%;
+    width: 100%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
+
+/* keyframe end */
+
+
+@media ( min-width: 992px){
+ #section_list #book_list{
+   margin: auto;
+    width: 70%;
+  }
 }
